[tool.poetry]
name = "clickhouse-sql-acces"
version = "0.1.0"
description = ""
authors = ["nithin <nithinnivi@gmail.com>"]
readme = "README.md"
packages = [{include = "clickhouse_sql_access"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
